--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
  - conda update -y conda
  - conda create -y -n cc python=3.6 anaconda || true
  - conda activate cc
+ - conda update --all
  - conda install -y tensorflow setuptools seaborn mpi4py cloudpickle joblib tqdm
  - cd -
     
