--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
  - conda activate cc
  - conda update --all
 # - conda install -y tensorflow setuptools seaborn mpi4py cloudpickle joblib tqdm
- - pip install -y mpi4py
+ - pip install mpi4py
  - conda install -y tensorflow
  - cd -
     
